# vedabase-app

./: .gitignore  CLAUDE.md  README.md  capacitor.config.ts  electron.js  index-vedabase.html  index.html  package-lock.json  package.json  split_at_cantos.py  split_at_cantos_fixed.py  split_cc_at_lilas.py  split_cc_fixed.py  split_files.py  split_files_fixed.py  split_properly.py  split_sb_correct.py  split_sb_fixed.py  split_sb_proper.py  update-download-links.sh  update_html_links.py  vedabase-landing.html
.claude/: settings.local.json
.github/workflows/: build-ios.yml  build.yml  tauri-build.yml
docs/: INSTALL_MAC.md  bg.html  index.html  kb.html  vedabase.html
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
scripts/: create-dmg.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
vedabase-app/: collapse-script.js  font-control.js  index.html  landing.html  vedabase.html
vedabase-app/vedabase-source/: bg.html  cc1.html  cc3.html  collapse-script.js  kb.html  remove_lec1_toc.py  split_lec1.py  split_lec2.py  verify_lecture_splits.py
